Refactor update light with builder